added customization and logging features

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,40 @@
-:root{
+
+.classic-theme{
   /* default in shades of blue */
   --background: #F7F7FF;
+  --background-img: none;
   --button-text: #35404b;
   --button-bg: #bdd5ea94;
- 
+  --button-focus: #bdeadbe8;
+  --font-family: 'Helvetica Neue', sans-serif;
+  --font-color: rgb(8, 3, 3);
+  --hover-color: rgb(235, 213, 165);
+  
+}
+
+.night-theme{
+  --background: #27273f;
+  --background-img: none;
+  --button-text: #f7e11f;
+  --button-bg: #cee0f094;
+  --button-focus: #030b55e8;
+  --font-family: 'Helvetica Neue', sans-serif;
+  --font-color: rgb(255, 255, 255);
+  --hover-color: rgb(37, 13, 46);
+}
+
+.throwback-theme{
+  /* img src Pawel Czerwinski via UpSplash */
+  /* cursor https://www.cursors-4u.com */
+  --background:#fef7ff;
+  --background-img: url('./components/images/background.jpg');
+  --button-text: #35404b;
+  --button-bg: #bdd5ea94;
+  --button-focus: #bdeadbe8;
+  --font-color: rgb(8, 3, 3);
+  --hover-color: rgb(235, 165, 223);
+  cursor: url(https://ani.cursors-4u.net/nature/nat-11/nat1045.cur), auto !important;
+  --font-family: 'Gochi Hand';
 }
 
 #App{
@@ -11,7 +42,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: var(--background-img);
   background-color: var(--background);
+  color: var(--font-color);
+  font-family: var(--font-family);
 }
 
 #Header{
@@ -21,12 +55,12 @@
 }
 
 #title{
-  font-size: 50px;
+  font-size: 40px;
   text-align: center;
 }
 
 #description{
-  font-size: 35px;
+  font-size: 25px;
   font-weight: 200;
   text-align: center;
 }
@@ -47,7 +81,7 @@
 }
 
 .digit-select{
-  font-size: 45px;
+  font-size: 35px;
   padding: 5px 10px;
   margin: 2px 10px;
   background-color: var(--button-bg);
@@ -55,8 +89,26 @@
   border: 1px solid var(--button-text);
   border-radius: 5px;
 }
-#submit-number, #reset-button{
-  font-size: 25px;
+.digit-select:focus{
+  background-color: var(--button-focus);
+}
+
+select, button{
+  font-family: var(--font-family);
+}
+
+#reset-button, #attempts-button{
+  font-size: 15px;
+  padding: 10px 20px;
+  margin: 0px 0px 20px 0px;
+  background-color: var(--button-bg);
+  color: var(--button-text);
+  border: 2px solid var(--button-text);
+  border-radius: 5px;
+}
+
+#submit-number{
+  font-size: 15px;
   padding: 10px 20px;
   margin: 0px 0px 0px 30px;
   background-color: var(--button-bg);
@@ -64,22 +116,60 @@
   border: 2px solid var(--button-text);
   border-radius: 5px;
 }
-#submit-number:hover{
-  background-color: rgb(235, 213, 165);
+
+#submit-number:hover, 
+#reset-button:hover, 
+#attempts-button:hover{
+  background-color: var(--hover-color);
 }
-#reset-button:hover{
-  background-color: rgb(215, 165, 235);
-}
-#submit-number:active, #reset-button:active{
+#submit-number:active, #reset-button:active, #attempts-button:active{
   transform: scale(0.8);
 }
+
 
 
 #result-container{
   display: flex;
   flex-direction: column;
-  font-size: 35px;
+  font-size: 25px;
   font-weight: 300;
   text-align: left;
-  margin: 30px 0px;
+  margin: 10px 0px;
+}
+
+
+
+#attempts-container{
+  display: none;
+  flex-direction: row;
+  padding: 10px 10px;
+  line-height: 1.5;
+  border: 1px solid var(--button-text);
+  background-color: var(--button-bg);
+  border-radius: 5px;
+}
+
+.attempt-log{
+  padding: 0px 10px;
+}
+
+#customize-title{
+  font-weight: 500;
+  font-size: 28px;
+  padding: 5px 0px;
+}
+#custom-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: 200;
+  font-size: 25px;
+  width: 50vw;
+  padding: 10px 10px;
+  margin: 10px 0px;
+}
+#theme-input-container{
+  display: flex;
+  flex-direction: column;
+  padding: 5px 0px;
 }
